[project]
name = "byop"
version = "0.8.0"
dependencies = [
  "typing_extensions",  # Better typing
  "more_itertools",  # Better iteration
  "psutil",  # Used for process termination of executors
  "attrs",
  "pandas",
  "numpy",
  "pynisher",
]
requires-python = ">=3.8"
authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
readme = "README.md"
description = "Build Your Own Pipeline: a toolkit for building automl system"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
  "commitizen",
  "pre-commit",
  "commitizen",
  "black",
  "ruff",
  "mypy",
  "types-psutil",
  "types-pyyaml",
]
test = [
  "pytest",
  "pytest-coverage",
  "pytest-cases",
  "distributed",
  "scikit-learn",
  "openpyxl",
  "pyarrow",
]
doc = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-autorefs",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocstrings[python]",
  "markdown-exec[ansi]",
  "mike",
  "pillow",
  "cairosvg",
]
smac = [
  "smac>=2.0",
  "configspace",
]
optuna = ["optuna"]

[project.urls]
documentation = "https://github.com/automl/byop/"
source = "https://github.com/automl/byop/"

# https://docs.pytest.org/en/7.2.x/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7.0"
empty_parameter_set_mark = "xfail"
log_cli = false
log_level = "DEBUG"
xfail_strict = true
addopts = "--durations=10 -vv"


[tool.coverage.run]
branch = true
context = "byop"

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  '\.\.\.',
  "raise NotImplementedError",
  "if TYPE_CHECKING",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.0"
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = ["pyproject.toml:version", "src/byop/__version__.py"]

[tool.black]
target-version = ['py38']

# https://github.com/charliermarsh/ruff
[tool.ruff]
target-version = "py38"
line-length = 88
show-source = true
src = ["src", "tests"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C",
  "C4",
  "D",
  "DTZ",
  "E",
  "F",
  "FBT",
  "I",
  "INP",
  "N",
  "PD",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PIE",
  "PT",
  "Q",
  "PGH004", # Use specific rule codes when using noqa
  "RET",
  "RUF",
  "C90",
  "S",
  "SIM",
  "T",
  # "TRY",
  "T10",
  "UP",
  "N",
  "W",
  "YTT",
]

ignore = [
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic mthod
  "D203", # 1 blank line required before class docstring
  "D205", # 1 blank line between summary and description
  "D401", # First line of docstring should be in imperative mood
  "N806", # Variable X in function should be lowercase
  "E731", # Do not assign a lambda expression, use a def
  "A003", # Shadowing a builtin
  "S101", # Use of assert detected.
  "W292", # No newline at end of file
  "PLC1901", # "" can be simplified to be falsey
]

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "docs",
]

# Exclude a variety of commonly ignored directories.
[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "S101",
    "D103",
    "ANN001",
    "ANN201",
    "D100",
    "PLR2004",
    "PD901",  #  X is a bad variable name. (pandas)
]
"src/byop/__version__.py" = ["D100"]
"__init__.py" = ["I002"]
"examples/*" = ["INP001"]


[tool.ruff.isort]
known-first-party = ["byop"]
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
force-wrap-aliases = true

[tool.ruff.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.8"

show_error_codes = true

warn_unused_configs = true # warn about unused [tool.mypy] lines

follow_imports = "normal"      # Type check top level api code we use from imports
ignore_missing_imports = false # prefer explicit ignores

disallow_untyped_defs = true       # All functions must have types
disallow_untyped_decorators = true # ... even decorators
disallow_incomplete_defs = true    # ...all types

warn_return_any = true


[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false       # Sometimes we just want to ignore verbose types
disallow_untyped_decorators = false # Test decorators are not properly typed
disallow_incomplete_defs = false    # Sometimes we just want to ignore verbose types

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "ConfigSpace.*",
  "pandas.*",
  "more_itertools.*",
]
ignore_missing_imports = true

